fix: make the gameboard actually center itself when the width changes and give it a left buffer of 20 pxs when the width gets too small

--- a/client/style.css
+++ b/client/style.css
@@ -1,6 +1,7 @@
 body {
-    width: 60%;
-    margin: auto;
+    width: 100%;
+    margin: 0;  
+    padding: 0; 
     text-align: center;
 }
 
@@ -46,11 +47,19 @@ body {
     display: inline-block;
 }
 
+.game-board-wrapper {
+    width: 1340px;
+    margin: 0 auto;
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+
 #game-board {
     width: 1320px;
     height: 500px;
-    margin: auto;
+    margin: 0 auto;
     background-color: #4279aa;
+    position: relative;
 }
 
 .slidecontainer {
